
===========
Changes log  
===========


@version-full@ (@release-date@)
[Bugs fixed]
 - Fixed IndexOutOfBoundsException in HttpServerCall causing ServerServlet to fail. Reported by Steffen Eichenberg.
 - Fixed NPE in HostScorer when using URIs with default ports. Reported by Jeff Walter.
 - Fixed issue with header name comparison not ignoring the case. Reported by Sean Landis.
 - Fixed several documentation typos. Reported by John D. Mitchell.
 - Fixed issue with "sub-tagged" Language metadata (like "en-us"), sub-tag comparison must ignore the case. Reported by Jeff Walter and Andrew Barnes. Contributed by Thierry Boileau.
 - Improved parsing of "accept-encoding" HTTP headers. Added unit test.
 - Fixed potential NPE in HostScorer.

[API changes]
 - Removed Jetty 5 connector from the distribution. Use Jetty 6 connector instead. 
   Source code still available in SVN. Fixes #180.
 - Disabled Atom extension for 1.0 RC1. Postponed for completion in 1.1.
 - Changed Helper SPI interface into an abstract SPI class.
 - MapModel now derives from WrapperMap instead of TreeMap.
 - Finalized many classes in order to be explicit about what is intended to be subclassed or not. Contributed by Piyush Purang.
 - org.restlet.util.PipeStream was moved inside ByteUtils as a private class.
 - Merged ImmutableDate into DateUtils as an inner private class. Added an "unmodifiable" static method to DateUtils instead.
 - Added attachDefault(Restlet) method to Router class. The detach() method now also detaches the default scorer.
 
[Enhancements] 
 - Add new constructor to Tag for weak tags taking an unquoted opaque value. Fixes #201. 
   Suggested by Chris Grindstaff
 - Updated Spring library to 2.0.1
 - Refactored the JdbcClient to return XML result sets (using a new RowSetRepresentation class). In addition, the
   XML request can now contain several SQL statements to be executed as a batch. Contributed by Thierry Boileau. 